--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <html>
 <head>
 
-	<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
 	
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
-
-<!-- (Optional) Latest compiled and minified JavaScript translation files -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/i18n/defaults-*.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/slim-select/1.27.0/slimselect.min.css" rel="stylesheet"></link>
 </head>
 <body>
-    <select class="selectpicker" width="500" name="states[]" id="hey" multiple="multiple">
+    <select class="selectpicker" width="500" name="states[]" id="slim-select" multiple="multiple">
 																					<option  value="8f14e45fceea167a5a36dedd4bea2543+1"> Purchase Order No : 23051 </option>
 																					<option  value="c9f0f895fb98ab9159f51fd0297e236d+1"> Purchase Order No : 23050 </option>
 																					<option  value="45c48cce2e2d7fbdea1afc51c7c6ad26+1"> Purchase Order No : 22258 </option>
@@ -5059,13 +5049,9 @@
 
     <script>
         
-    var cuk = "";
-    $('.selectpicker').selectpicker();
-    
-    $('#hey').change(function(){
-       cuk = $('#hey').val();
-       console.log(cuk);
-    });
+new SlimSelect({
+  select: '#slim-select'
+})
 
     </script>
 </body>
