--- a/index.html
+++ b/index.html
@@ -5051,7 +5051,9 @@
         
 var slimselect = new SlimSelect({
   select: '#slim-select'
-})
+});
+	    
+	console.log(slimselect.selected());
 
     </script>
 </body>
